syntax = "proto3";

package task;

option go_package = "github.com/todo/proto/task";

import "google/protobuf/timestamp.proto";

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
  rpc ListUserTasks(ListUserTasksRequest) returns (ListUserTasksResponse);
}

enum TaskStatus {
  PENDING = 0;
  IN_PROGRESS = 1;
  COMPLETED = 2;
  CANCELLED = 3;
}

enum TaskPriority {
  LOW = 0;
  MEDIUM = 1;
  HIGH = 2;
  URGENT = 3;
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  TaskStatus status = 4;
  TaskPriority priority = 5;
  string user_id = 6;
  google.protobuf.Timestamp due_date = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  TaskPriority priority = 3;
  string user_id = 4;
  google.protobuf.Timestamp due_date = 5;
}

message CreateTaskResponse {
  Task task = 1;
  string error = 2;
}

message GetTaskRequest {
  string id = 1;
}

message GetTaskResponse {
  Task task = 1;
  string error = 2;
}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  TaskStatus status = 4;
  TaskPriority priority = 5;
  google.protobuf.Timestamp due_date = 6;
}

message UpdateTaskResponse {
  Task task = 1;
  string error = 2;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {
  bool success = 1;
  string error = 2;
}

message ListTasksRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListTasksResponse {
  repeated Task tasks = 1;
  int32 total = 2;
  string error = 3;
}

message ListUserTasksRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
  TaskStatus status = 4;
}

message ListUserTasksResponse {
  repeated Task tasks = 1;
  int32 total = 2;
  string error = 3;
}

